codex-rs/core/tests/suite/snapshots/all__suite__compact__mid_turn_compaction_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_history_snapshot(\"True mid-turn continuation compaction after tool output: compact request includes tool artifacts, and the continuation request includes the summary in the same turn.\",\n&[first_turn_mock.single_request(), auto_compact_mock.single_request(),\npost_auto_compact_mock.single_request(),])"
---
Scenario: True mid-turn continuation compaction after tool output: compact request includes tool artifacts, and the continuation request includes the summary in the same turn.

## Window 1
-- request 1 (turn) --
00:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
01:message/developer:
    Role: `/root`. Own the result and coordinate delegated work. Agent messages in analysis. `send_message`:... active agent, no new turn. `followup_task`: new turn [hash=ae93e86fb65ebd6a]
    Collaboration tools: direct calls, not inside `functions.exec`. Shared filesystem and working directory. Coordinated edits. Others' changes preserved
    Active-agent limit, including you: 4

    `model` or `reasoning_effort`: only when explicitly requested by the user, AGENTS.md, or skills. Overrid...Omitted or `"all"`: parent model and effort inherited [hash=d4c4ef044a7cfe99]
02:message/developer:
    <MULTI_AGENT_MODE>
03:message/user:
    <ENVIRONMENT_CONTEXT>
04:message/user:
    function call limit push

## Window 2 (after request 1: settings changed (parallel_tool_calls, tools))
-- request 2 (compaction) --
00:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
01:message/developer:
    Role: `/root`. Own the result and coordinate delegated work. Agent messages in analysis. `send_message`:... active agent, no new turn. `followup_task`: new turn [hash=ae93e86fb65ebd6a]
    Collaboration tools: direct calls, not inside `functions.exec`. Shared filesystem and working directory. Coordinated edits. Others' changes preserved
    Active-agent limit, including you: 4

    `model` or `reasoning_effort`: only when explicitly requested by the user, AGENTS.md, or skills. Overrid...Omitted or `"all"`: parent model and effort inherited [hash=d4c4ef044a7cfe99]
02:message/developer:
    <MULTI_AGENT_MODE>
03:message/user:
    <ENVIRONMENT_CONTEXT>
04:message/user:
    function call limit push
05:function_call/test_tool:{}
06:function_call_output:unsupported call: test_tool
07:message/user:
    <SUMMARIZATION_PROMPT>

## Window 3 (after request 2: input diverged at item 05, settings changed (parallel_tool_calls, tools))
-- request 3 (turn) --
00:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
01:message/developer:
    Role: `/root`. Own the result and coordinate delegated work. Agent messages in analysis. `send_message`:... active agent, no new turn. `followup_task`: new turn [hash=ae93e86fb65ebd6a]
    Collaboration tools: direct calls, not inside `functions.exec`. Shared filesystem and working directory. Coordinated edits. Others' changes preserved
    Active-agent limit, including you: 4

    `model` or `reasoning_effort`: only when explicitly requested by the user, AGENTS.md, or skills. Overrid...Omitted or `"all"`: parent model and effort inherited [hash=d4c4ef044a7cfe99]
02:message/developer:
    <MULTI_AGENT_MODE>
03:message/user:
    <ENVIRONMENT_CONTEXT>
04:message/user:
    function call limit push
05:message/user:
    <COMPACTION_SUMMARY>

    AUTO_SUMMARY
