codex-rs/core/tests/suite/snapshots/all__suite__compact__pre_turn_compaction_context_window_exceeded_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_labeled_requests_snapshot(\"Pre-turn auto-compaction context-window failure: compaction request excludes the incoming user message and the turn errors.\",\n&[(\"Local Compaction Request (Incoming User Excluded)\", &requests[0]),])"
---
Scenario: Pre-turn auto-compaction context-window failure: compaction request excludes the incoming user message and the turn errors.

## Window 1
-- request 1 (compaction; Local Compaction Request (Incoming User Excluded)) --
00:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
01:message/developer:
    Role: `/root`. Own the result and coordinate delegated work. Agent messages in analysis. `send_message`:... active agent, no new turn. `followup_task`: new turn [hash=ae93e86fb65ebd6a]
    Collaboration tools: direct calls, not inside `functions.exec`. Shared filesystem and working directory. Coordinated edits. Others' changes preserved
    Active-agent limit, including you: 4

    `model` or `reasoning_effort`: only when explicitly requested by the user, AGENTS.md, or skills. Overrid...Omitted or `"all"`: parent model and effort inherited [hash=d4c4ef044a7cfe99]
02:message/developer:
    <MULTI_AGENT_MODE>
03:message/user:
    <ENVIRONMENT_CONTEXT>
04:message/user:
    USER_ONE
05:message/assistant:
    FIRST_REPLY
06:message/user:
    <SUMMARIZATION_PROMPT>
