codex-rs/core/tests/suite/snapshots/all__suite__compact__pre_turn_compaction_including_incoming_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_history_snapshot(\"Pre-turn auto-compaction uses the prior context without the incoming user message; the follow-up carries the cwd override, image, and text.\",\n&requests)"
---
Scenario: Pre-turn auto-compaction uses the prior context without the incoming user message; the follow-up carries the cwd override, image, and text.

## Window 1
-- request 1 (turn) --
00:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
01:message/developer:
    Role: `/root`. Own the result and coordinate delegated work. Agent messages in analysis. `send_message`:... active agent, no new turn. `followup_task`: new turn [hash=ae93e86fb65ebd6a]
    Collaboration tools: direct calls, not inside `functions.exec`. Shared filesystem and working directory. Coordinated edits. Others' changes preserved
    Active-agent limit, including you: 4

    `model` or `reasoning_effort`: only when explicitly requested by the user, AGENTS.md, or skills. Overrid...Omitted or `"all"`: parent model and effort inherited [hash=d4c4ef044a7cfe99]
02:message/developer:
    <MULTI_AGENT_MODE>
03:message/user:
    <ENVIRONMENT_CONTEXT>
04:message/user:
    USER_ONE
-- request 2 (turn) --
05:message/assistant:
    FIRST_REPLY
06:message/user:
    USER_TWO

## Window 2 (after request 2: settings changed (parallel_tool_calls, tools))
-- request 3 (compaction) --
00:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
01:message/developer:
    Role: `/root`. Own the result and coordinate delegated work. Agent messages in analysis. `send_message`:... active agent, no new turn. `followup_task`: new turn [hash=ae93e86fb65ebd6a]
    Collaboration tools: direct calls, not inside `functions.exec`. Shared filesystem and working directory. Coordinated edits. Others' changes preserved
    Active-agent limit, including you: 4

    `model` or `reasoning_effort`: only when explicitly requested by the user, AGENTS.md, or skills. Overrid...Omitted or `"all"`: parent model and effort inherited [hash=d4c4ef044a7cfe99]
02:message/developer:
    <MULTI_AGENT_MODE>
03:message/user:
    <ENVIRONMENT_CONTEXT>
04:message/user:
    USER_ONE
05:message/assistant:
    FIRST_REPLY
06:message/user:
    USER_TWO
07:message/assistant:
    SECOND_REPLY
08:message/user:
    <SUMMARIZATION_PROMPT>

## Window 3 (after request 3: input diverged at item 00, settings changed (parallel_tool_calls, tools))
-- request 4 (turn) --
00:message/user:
    USER_ONE
01:message/user:
    USER_TWO
02:message/user:
    <COMPACTION_SUMMARY>

    PRE_TURN_SUMMARY
03:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
04:message/developer:
    Role: `/root`. Own the result and coordinate delegated work. Agent messages in analysis. `send_message`:... active agent, no new turn. `followup_task`: new turn [hash=ae93e86fb65ebd6a]
    Collaboration tools: direct calls, not inside `functions.exec`. Shared filesystem and working directory. Coordinated edits. Others' changes preserved
    Active-agent limit, including you: 4

    `model` or `reasoning_effort`: only when explicitly requested by the user, AGENTS.md, or skills. Overrid...Omitted or `"all"`: parent model and effort inherited [hash=d4c4ef044a7cfe99]
05:message/developer:
    <MULTI_AGENT_MODE>
06:message/user:
    <ENVIRONMENT_CONTEXT>
07:message/user[2]:
    [01] <input_image:detail,image_url>
    [02] USER_THREE
